// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders options for active concerns 1`] = `
<optgroup
  label="Active concerns"
>
  <option
    value="patient-concern-2"
  >
    Concern 2
  </option>
</optgroup>
`;

exports[`renders options for inactive concerns 1`] = `
<optgroup
  label="Inactive concerns"
>
  <option
    value="patient-concern-1"
  >
    Concern Title
  </option>
</optgroup>
`;

exports[`renders options for suggested concerns 1`] = `
<optgroup
  label="Suggested concerns"
>
  <option
    value="concern-id"
  >
    Concern Title
  </option>
</optgroup>
`;
